--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
             <h2>Welcome to My Personal Page</h2>
         </header>
         <section>
-            <p>Hello! I'm Jeevan Kishore, a passionate individual with an interest in web development and design. This is my personal space on the web where I share my projects, thoughts, and experiences.</p>
+            <p>Hello! I'm Jeevan Kishore and I am studing in sri krishna college of engeneering and technology , a passionate individual with an interest in web development and design. This is my personal space on the web where I share my projects, thoughts, and experiences.</p>
             <p>Feel free to explore my work and get in touch if you would like to collaborate on any projects or just want to say hello!</p>
+            
         </section>
         <section>
             <h2>Skills</h2>
             <ul>
+                <li>c and java and python</li>
+                
                 <li>HTML5, CSS3, JavaScript</li>
                 <li>Responsive Web Design</li>
                 <li>Git & Version Control</li>
