--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>Welcome to My Personal Page</h2>
         </header>
         <section>
-            <p>Hello! I'm Jeevan Kishore and I am studing in sri krishna college of engeneering and technology , a passionate individual with an interest in web development and design. This is my personal space on the web where I share my projects, thoughts, and experiences.</p>
+            <p>Hello! I'm Jeevan Kishore and I am studing in sri krishna college of engineering and technology , a passionate individual with an interest in web development and design. This is my personal space on the web where I share my projects, thoughts, and experiences.</p>
             <p>Feel free to explore my work and get in touch if you would like to collaborate on any projects or just want to say hello!</p>
             
         </section>
