--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <section>
             <h2>Contact</h2>
             <ul class="contact-list">
-                <li><strong>Email:</strong> <a href="mailto:jeevan.kishore@email.com">jeevan.kishore@email.com</a></li>
+                <li><strong>Email:</strong> <a href="mailto:jeevankishore.9490@gmail.com">jeevan.kishore@email.com</a></li>
                 <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/jeevankishore" target="_blank">linkedin.com/in/jeevankishore</a></li>
-                <li><strong>Phone:</strong> <a href="tel:+911234567890">+91 12345 67890</a></li>
+                <li><strong>Phone:</strong> <a href="tel:9442983888">+91 12345 67890</a></li>
             </ul>
         </section>
         <footer>
