Update project link in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <ul>
                         <li>HTML, CSS, JS</li>
                         <li>Responsive design</li>
-                        <li><a href="#" target="_blank">View Project</a></li>
+                        <li><a href=" https://jeevan123-craz.github.io/FIN/" target="_blank">View Project</a></li>
                     </ul>
                 </div>
                 <div class="project-card">
