--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section>
             <h2>Skills</h2>
             <ul>
-                <li>c and java and python</li>
+                <li>C and java and python</li>
                 
                 <li>HTML5, CSS3, JavaScript</li>
                 <li>Responsive Web Design</li>
